# TRAMONTANE

./: .env.example  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: api-reference.md  memory.md  patterns.md  quickstart.md  skills.md  smart-fleet.md
examples/: budget_routing.py  pipeline_code_review.py  quickstart.py
tests/: live_validation.py  test_agent.py  test_cli.py  test_knowledge.py  test_memory_engine.py  test_memory_retrieval.py  test_memory_tools.py  test_memory_working.py  test_parallel.py  test_router.py  test_skills_base.py  test_skills_builtin.py  test_skills_composition.py  test_skills_loader.py  test_skills_registry.py  test_tuner.py  test_voice_tts.py  test_yaml_pipeline.py
tramontane/: __init__.py  __main__.py
tramontane/cli/: main.py
tramontane/core/: _sync.py  agent.py  handoff.py  parallel.py  pipeline.py  tuner.py  workflow.py  yaml_pipeline.py
tramontane/demo/: README.md  app.py  requirements.txt
tramontane/gdpr/: audit.py  pii.py  reports.py
tramontane/hub/: client.py
tramontane/knowledge/: __init__.py  base.py
tramontane/memory/: engine.py  extraction.py  longterm.py  retrieval.py  tools.py  working.py
tramontane/router/: classifier.py  models.py  router.py
tramontane/server/: routes.py
tramontane/skills/: __init__.py  base.py  builtin.py  composition.py  loader.py  registry.py
tramontane/tools/: mcp.py  sandbox.py
tramontane/voice/: gateway.py  tts.py
